--- a/EX4.1.ipynb
+++ b/EX4.1.ipynb
@@ -7,6 +7,7 @@
     "# First go- Linear SVM\n",
     "## Alon Maharshak - 302955851\n",
     "## Miri Hazanov 204500763\n",
+    "## User name- alonma , grage : 0.77778, place- 790\n",
     "### Data preparation\n",
     "\n",
     "First thing we want to do is import all of the relevant file and use the cross validation function to test our model before the test file."
@@ -91,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can load the train file and address all the issues:\n",
+    "### Now we can load the train file and address all the issues:\n",
     "1. Fill all of the numeric features null values with the mean value.\n",
     "2. The rest of the null values we weill feel using the majority rule.\n",
     "3. Create some new features- Total income and loan amount, both of them we will normalize using the LOG function."
@@ -330,9 +331,9 @@
    "source": [
     "## Results:\n",
     "\n",
-    "We got a grade of 0.77778 and we're at place number 790(alonma)\n",
+    "We got a grade of 0.77778 and we're at place number 790\n",
     "\n",
-    "<img src=\"https://github.com/alonma/HW4/blob/master/Capture1.JPG\" />"
+    "<img src= \"https://github.com/alonma/HW4/blob/master/Capture1.JPG\"/>"
    ]
   }
  ],
