--- a/EX4.1.ipynb
+++ b/EX4.1.ipynb
@@ -333,7 +333,9 @@
     "\n",
     "We got a grade of 0.77778 and we're at place number 790\n",
     "\n",
-    "<img src= \"https://github.com/alonma/HW4/blob/master/Capture1.JPG\"/>"
+    "<img src= \"https://github.com/alonma/HW4/blob/master/Capture1.JPG\"/>\n",
+    "\n",
+    "[SVM File](https://github.com/alonma/HW4/blob/master/my_submissionSVM.csv)"
    ]
   }
  ],
